--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ scikit-learn>=1.3.0
 numpy>=1.24.0
 requests>=2.31.0
 
+# PDF support
+pypdf>=3.17.0  # For PDF text extraction
+
 # Optional but recommended
 torch>=2.0.0  # For sentence transformers
 transformers>=4.35.0  # For local model loading if needed
