--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ pypdf>=3.17.0  # For PDF text extraction
 torch>=2.0.0  # For sentence transformers
 transformers>=4.35.0  # For local model loading if needed
 
+# Vector store
+chromadb>=0.4.22
+
